compiler/tests/sct-checker/success/while.jazz
#[sct = "public × secret → public"]
fn while_first_branch(
    reg u64 pub,
    reg u64 sec
) ->
    reg u64
{
    reg bool b;
    b = 0 < sec;
    while {
        b = 0 < pub;
    } (b) {
        pub -= 1;
    }
    return pub;
}
